# algolib

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  checksol.py  run_all_tests.py
bellmanford/: sample.in  sample2.in
calculator/: calculator.cpp  parser.h  sample.in
chineseremainder/: crt.h  sample.in  sample3.in
chineseremainder2/: chineseremainder.h  generalchinese_runner.cpp  modulararithmetic.h  regularchinese_runner.cpp
christofides/: christofides.cpp  christofides2.cpp  matching.cpp  matching.h  matching.in  minspantree.cpp  minspantree.h
combinatorics/: combinatorics.cpp  combinatorics.h
datastructures/: disjoint_set.bak.h  disjoint_set.cpp  disjoint_set.h
dijkstra/test/: sample3.ans  (+3 more)
dijkstra_time/: DijkstraTime.cpp  DijkstraTime.h
equationsolver/: gaussjordan.h
eulerianpath/: eulerianpath.cpp  eulerianpath.h  main.cpp  test2.in  test3.in
eulerianpath_backup/: euler  eulerianpath.h
eulerianpath_sort_of_works/: euler  eulerianpath.cpp  main.cpp  sample.in  test.in
eulerianpath_working_copu/: eulerianpath.h
factorization/: factorization_test.cpp  generator  generator.cpp
floydw/: allpairspath.cpp
geometry/: pointinpolygon.cpp
graph/: bellmanford.cpp  bellmanford.h  dijkstra.cpp  dijkstra.h  dijkstratime.cpp  dijkstratime.h  eulerianpath.cpp  eulerianpath.h  floydw.cpp  floydw.h  fordfulkerson.cpp  fordfulkerson.h  minspantree.cpp  scc.cpp  scc.h
indexmapping/: indexmapping.cpp
knapsack/: generator  generator.cpp  knapsack.cpp  knapsack.cpp.bak  knapsack.h
longincsubseq/: generator  increasingsubsequence.cpp  increasingsubsequence.h  runner.cpp
math/: combinatorics.cpp  combinatorics.h  crt.h  factorization.h  gaussjordan.h  gcd.h  modulararithmetic.h  primesieve.cpp  primesieve.h  rational.h
mincostmaxflow/: main.cpp  mincostmaxflow.cpp  sample26.elak
mincostmaxflow2/: fordfulkerson.cpp  sample.elak
minspantree/: main.cpp  minspantree.cpp  minspantree.h
minspantree_int/: main.cpp  minspantree.cpp  test6.elak  test7.elak
misc/: calculator.cpp  calculator.h  knapsack.cpp  knapsack.h  longincsubseq.cpp  longincsubseq.h  parser.cpp  parser.h
pointinpolygon/: pointinpolygon.cpp  sample.elak  sample.elak.ans  sample3.elak
priemesieve/: PrimeSieve.cpp  PrimeSieve.h  runner.cpp
rational/: Rational.h  Runner.cpp  sample.in  sample2.in
string/: ahocorasick.cpp  ahocorasick.h  suffixarray.cpp  suffixarray.h
stringmatching/: TrieNode.h  stringmatching.cpp  stringmultimatching.cpp
stringmultimatching/: gcov_old  stringmultimatching.cpp  stringmultimatching.cpp_backup  test
strongly_connected_components/: generator.cpp  sol_checker.cpp
suffixarray/: Suffixarray.cpp
suffixarray2/: suffixsorting.cpp
suffixarray_initial_atempt/: Suffixarray.h  suffixsorting.cpp  test
suffixarray_with_vec/: Suffixarray.cpp  Suffixarray.h  suffixsorting.cpp  test
util/: checksol.py  fastio.h  gensol.py  indexmap.cpp  indexmap.h  p_util.cpp
(+377 files in other folders)
