cmake_minimum_required(VERSION 3.6)
project(algolib)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(disjoint_set datastructures/tests/disjoint_set/disjoint_set_test.cpp datastructures/disjoint_set.cpp)
add_executable(pointinpolygon geometry/tests/pointinpolygon/pointinpolygon_test.cpp geometry/pointinpolygon.cpp)
add_executable(segmentintersection geometry/tests/segmentintersection/segmentintersection_test.cpp geometry/segmentintersection.cpp)
add_executable(bellmanford graph/tests/bellmanford/bellmanford_test.cpp graph/bellmanford.cpp)
add_executable(dijkstra graph/tests/dijkstra/dijkstra_test.cpp graph/dijkstra.cpp)
add_executable(dijkstratime graph/tests/dijkstra_time/dijkstratime_test.cpp graph/dijkstratime.cpp)
add_executable(eulerianpath graph/tests/eulerianpath/eulerianpath_test.cpp graph/eulerianpath.cpp)
add_executable(floydw graph/tests/floydw/floydw_test.cpp graph/floydw.cpp)
add_executable(fordfulkerson graph/tests/maxflow/maxflow.cpp graph/fordfulkerson.cpp)
add_executable(mincostmaxflow graph/tests/mincostmaxflow/mincostmaxflow_test.cpp graph/fordfulkerson.cpp)
add_executable(mincut graph/tests/mincut/mincut.cpp graph/fordfulkerson.cpp)
add_executable(minspantree graph/tests/minspantree/minspantree_test.cpp graph/minspantree.cpp)
add_executable(scc graph/tests/strongly_connected_components/scc_test.cpp graph/scc.cpp)
add_executable(regularchinese_runner math/tests/crt/regularchinese_runner.cpp)
add_executable(divisors math/tests/divisors/divisors_test.cpp)
add_executable(factorization math/tests/factorization/factorization_test.cpp)
add_executable(equationsolver math/tests/gaussjordan/equationsolver.cpp)
add_executable(equationsolverplus math/tests/gaussjordanplus/equationsolverplus.cpp)
add_executable(gcd math/tests/gcd/gcd_test.cpp)
add_executable(generalchinese_runner math/tests/general_crt/generalchinese_runner.cpp)
add_executable(modulararithmetic math/tests/modulararithmetic/modulararithmetic.cpp)
add_executable(prime_factors math/tests/prime_factors/prime_factors_test.cpp)
add_executable(primesieve math/tests/primesieve/primesieve_test.cpp math/primesieve.cpp)
add_executable(rational math/tests/rational/rational_test.cpp)
add_executable(ways_to_pick math/tests/ways_to_pick/ways_to_pick_test.cpp)
add_executable(parser misc/tests/calculator/calculator_test.cpp misc/calculator.cpp misc/parser.cpp)
add_executable(knapsack misc/tests/knapsack/knapsack_test.cpp misc/knapsack.cpp)
add_executable(longincsubseq misc/tests/longincsubseq/longincsubseq_test.cpp misc/longincsubseq.cpp)
add_executable(ahocorasick string/tests/ahocorasick/ahocorasick_test.cpp string/ahocorasick.cpp)
add_executable(suffixarray string/tests/suffixarray/suffixsorting_test.cpp string/suffixarray.cpp)
add_executable(indexmapping util/tests/indexmapping/indexmapping.cpp)

